--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,4 @@ spring.datasource.url=jdbc:mysql://10.0.0.27:3306/doctors?useSSL=false&serverTim
 spring.datasource.username=root
 spring.datasource.password=*Jhon2001
 spring.jpa.show-sql= true
+server.port=8080
