--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 spring.main.banner-mode=off
 logging.level.org.springframework=ERROR
-
+spri
 spring.datasource.url=jdbc:mysql://localhost:3306/doctors?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Admin1234*
